static/css/base.css
@font-face {
    font-family: "cubechaos";
    src: url("../resources/fonts/HyliaSerifBeta-Regular.otf") format("opentype");
    font-style: normal;
}

body {
    margin: 0px;
    position: relative;
    min-height: 100vh;
    background-image: url("../resources/backgrounds/downloads_background.png.webp");
    background-repeat: repeat;
    background-size: 256px 256px;
    background-color: rgb(59, 59, 59);
}

#header {
    background-color: #202020;
    overflow: hidden;
    height: 100px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

#header_content {
    width: 100%;
    max-width: 1240px;
    height: 100%;
    display: flex;
    flex-direction: row;
}

#header_logo {
    width: 33%;
    display: flex;
    align-items: center;
    justify-content: left;
}

#header_logo_a {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 20px;
}

#header_space_between {
    width: 46%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#banner_sticky_piston_logo {
    width: 10%;
}

#banner_sticky_piston_logo a {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

#banner_sticky_piston_logo a img {
    width: 100%;
    margin-left: 10px;
}

#header_icons {
    width: 20%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

#header_icons a {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#header_icons a img {
    height: auto;
    padding: 20%;
    width: 100%;
    image-rendering: crisp-edges;
}


@media (max-width: 1000px) {
    #header_icons a {
        height: 50%;
        width: 50%;
        display: flex;
        align-items: center;
        justify-content: center;
    }
}

@media (max-width: 600px) {

    #header {
        height: 200px;
    }
    #header_content {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    #header_space_between {
        display: none;
    }

    #header_logo {
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        margin-left: -5px;
    }

    #banner_sticky_piston_logo {
        display: none;
    }

    #header_icons {
        width: 50%;
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin-top: -7%;
    }
}

#logo {
    height: 80px;
    transition: all .2s ease-in-out;
}

#logo:hover {
    transform: scale(1.05);
}

#logo_text {
    height: 150px;
    margin-left: 10px;
}

.header_spacer {
    height: 0px;
    background-color: white;
}

#navbar {
    height: 30px;
    position: sticky;
    display: flex;
    justify-content: center;
    flex-direction: row;
    align-items: center;
    top: 0px;
    background: rgba(59, 59, 59, 0.5);
    z-index: 999;
    filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
    
}

.navbar_button {
    display: inline-flex;
    align-items: center;
    padding-left: 5px;
    padding-right: 5px;
    color:white;
    opacity: 1;
    height: 100%;
    cursor: pointer;
    text-decoration: none;
    font-family: "cubechaos", serif;
}

.navbar_button:hover {
    background-color: rgb(0, 0, 0);
}

.banner_space {
    display: block;
    height: 330px;
    overflow: hidden;
    margin-top: -30px;
    filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.4));
}

.banner_container {
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-image: url("/static/resources/banner/backgrounds/banner_background_0.png.webp");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
}

.banner_container_background_holder {
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: absolute;
    background-image: url("/static/resources/banner/backgrounds/banner_background_0.png.webp");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    top: 0;
    left: 0;
}

.banner_slide {
    height: 100%;
    width: 70%;
    max-width: 1000px;
    margin: auto;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.banner_slide img {
    width: 100%;
    height: auto;
    object-fit: contain;
}

.banner_slide_1_div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    margin-top: 20px;
    width: 60%;
}


#banner_nether_update {
    width: 120%;
}

.banner_button {
    z-index: 9999;
    position: absolute;
    top: calc(50% - 10px);
    width: 20px;
    height: 20px;
    
}

.banner_left_button {
    left: 10%;
}

.banner_right_button {
    right: 10%;
    background: transparent;
    border: 0;
}


@media (max-width: 620px) {
    .banner_space {
        display: block;
        height: 230px;
        overflow: hidden;
        margin-top: -30px;
        filter: drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.8));
    }

    .banner_slide_1_div {
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
        overflow: hidden;
        width: 60%;
    }
}

.content {
    margin: auto;
    margin-top: 50px;
    width: 70%;
    max-width: 1000px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-bottom: 200px;
}

@media (max-width: 490px) {
    .content {
        margin: auto;
        margin-top: 20px;
        width: 90%;
        max-width: 875px;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}


.video_content {
    position: relative;
    padding-bottom: 56.25%;
}
/* ... */

